--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,8 +1,10 @@
-name:Hello world
-on: push
+---
+name: 'hello-world'
+'on': 'push'
 jobs:
-  hello:
-    runs-on: ubunto-latest
+  my-job:
+    runs-on: 'ubuntu-latest'
     steps:
-     -name: hello world
-      run: echo "Hello ,World"
+      - name: 'my-step'
+        run: 'echo "Hello World!"'
+
